Fix for quoting blurb about signed messages - Bug #23075 - r: jefft